Fixed copyright alignment

--- a/less/sky/sky.less
+++ b/less/sky/sky.less
@@ -74,7 +74,7 @@ a {
   width: @content_width;
   min-width: @content_width;
   color: #616161;
-  margin: 0 10px;
+  .centered();
 }
 
 .clear {
